<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cb91b0"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout1"
        android:layout_width="412dp"
        android:layout_height="450dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:layout_marginBottom="28dp"
            android:onClick="submitData"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/datetext"
            android:layout_width="64dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="26dp"
            android:text="@string/Dateinput"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coursetext" />

        <TextView
            android:id="@+id/sessiontext"
            android:layout_width="98dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="31dp"
            android:text="@string/session"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourtext" />

        <EditText
            android:id="@+id/dateinput"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/datehint"
            android:inputType="date"
            android:maxLength="10"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/sessioninput"
            android:layout_width="89dp"
            android:layout_height="43dp"
            android:layout_marginStart="73dp"
            android:layout_marginLeft="73dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:entries="@array/sessionlist"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sessiontext"
            app:layout_constraintTop_toBottomOf="@+id/hourspin" />

        <TextView
            android:id="@+id/idtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/id"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/idinput"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/idinput"
            android:layout_width="97dp"
            android:layout_height="44dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="124dp"
            android:layout_marginRight="124dp"
            android:ems="10"
            android:hint="@string/idexample"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="8"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hourtext"
            android:layout_width="62dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="34dp"
            android:text="@string/hour"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datetext" />

        <Spinner
            android:id="@+id/hourspin"
            android:layout_width="161dp"
            android:layout_height="44dp"
            android:layout_marginStart="109dp"
            android:layout_marginLeft="109dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:dropDownWidth="match_parent"
            android:entries="@array/hours"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hourtext"
            app:layout_constraintTop_toBottomOf="@+id/dateinput" />

        <TextView
            android:id="@+id/coursetext"
            android:layout_width="92dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:text="@string/course"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idtext" />

        <Spinner
            android:id="@+id/coursespin"
            android:layout_width="98dp"
            android:layout_height="35dp"
            android:layout_marginStart="81dp"
            android:layout_marginLeft="81dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:entries="@array/courses"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/coursetext"
            app:layout_constraintTop_toBottomOf="@+id/idinput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="83dp"
        android:background="#CD1076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="28dp"
            android:background="#00FFFFFF"
            android:text="@string/appintro"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="199dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#CD1076"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout1">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>